Login and Registration componentes added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<h1 class="text-3xl font-bold underline text-center">
-  Hello world!
-</h1>
-
-
-<router-outlet />
+<div class="min-h-screen bg-gray-100 dark:bg-gray-900">
+  <app-navbar></app-navbar>
+  <main class="container mx-auto px-4 py-8">
+    <router-outlet />
+  </main>
+</div>
