--- a/src/app/modules/user/invoices/invoices.component.html
+++ b/src/app/modules/user/invoices/invoices.component.html
@@ -8,7 +8,7 @@
             <div class="flex justify-between items-center mb-4">
               <div>
                 <h3 class="text-lg font-semibold text-gray-800 dark:text-white">
-                  Order by {{invoice.user.name}}
+                  Order #{{invoice._id}}
                 </h3>
                 <p class="text-sm text-gray-600 dark:text-gray-300">
                   {{invoice.purchaseDate | date:'medium'}}
