--- a/src/app/modules/admin/products/products.component.html
+++ b/src/app/modules/admin/products/products.component.html
@@ -31,9 +31,11 @@
       <div *ngFor="let product of filteredProducts" 
            class="bg-white dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden">
         <!-- Imagen del producto -->
-        <img [src]="" 
-             [alt]="product.name"
-             class="w-full h-48 object-cover">
+        <div class="w-full h-48 bg-gray-300 dark:bg-gray-700 flex items-center justify-center">
+          <svg class="w-16 h-16 text-gray-500 dark:text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
+          </svg>
+        </div>
         
         <div class="p-4">
           <div class="flex justify-between items-start mb-2">
